servicemesh/istio/ingress/kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: istio-kiali
  namespace: istio-system
spec:
  rules:
  - host: istio-kiali.xwfintech.com
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /
  tls:
  - hosts:
    - istio-kiali.xwfintech.com
    secretName: xwfintech.com
