servicemesh/istio/ingress/tracing-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: istio-tracing
  namespace: istio-system
spec:
  rules:
  - host: istio-tracing.xwfintech.com
    http:
      paths:
      - backend:
          serviceName: tracing
          servicePort: 80
        path: /
  tls:
  - hosts:
    - istio-tracing.xwfintech.com
    secretName: xwfintech.com
