servicemesh/istio/ingress/zipkin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: istio-zipkin
  namespace: istio-system
spec:
  rules:
  - host: istio-zipkin.xwfintech.com
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: 9411
        path: /
  tls:
  - hosts:
    - istio-zipkin.xwfintech.com
    secretName: xwfintech.com
